--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,43 @@ jobs:
         run: |
           git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE_NAME
           git push --force space main
+          
+  deploy_docs_explorer:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Push hf-translation-docs-explorer to HF Space
+        env:
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_SPACE_NAME_DOCS_EXPLORER: ${{ secrets.HF_SPACE_NAME_DOCS_EXPLORER }}
+        run: |
+          git subtree split --prefix=external/mcp-servers/hf-translation-docs-explorer -b docs-explorer-branch
+
+          git remote add space-docs-explorer https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE_NAME_DOCS_EXPLORER
+          git push --force space-docs-explorer docs-explorer-branch:main
+
+  deploy_translation_reviewer:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Push hf-translation-reviewer to HF Space
+        env:
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_SPACE_NAME_TRANSLATION_REVIEWER: ${{ secrets.HF_SPACE_NAME_TRANSLATION_REVIEWER }}
+        run: |
+          git subtree split --prefix=external/mcp-servers/hf-translation-reviewer -b translation-reviewer-branch
+
+          git remote add space-translation-reviewer https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE_NAME_TRANSLATION_REVIEWER
+          git push --force space-translation-reviewer translation-reviewer-branch:main
