--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
+          ref: mcp/docs-search-review   # 추후 main 수정
 
       - name: Setup LFS & migrate images
         run: |
@@ -25,10 +26,9 @@ jobs:
           echo "images/** filter=lfs diff=lfs merge=lfs -text" >> .gitattributes
           git add .gitattributes
           git commit -m "Add images to LFS tracking" || echo "No changes"
-          # Ensure working directory is clean
           git add -A
           git diff --cached --quiet || git commit -m "Pre-migrate: commit all changes" || echo "No changes"
-          git lfs migrate import --include="images/**" --include-ref=refs/heads/main
+          git lfs migrate import --include="images/**" --include-ref=refs/heads/mcp/docs-search-review # 추후 main 수정
 
       - name: Deploy to Hugging Face Space
         env:
@@ -37,8 +37,8 @@ jobs:
           HF_SPACE_NAME: ${{ secrets.HF_SPACE_NAME }}
         run: |
           git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE_NAME
-          git push --force space main
-          
+          git push --force space mcp/docs-search-review:main # 추후 main 수정
+
   deploy_docs_explorer:
     runs-on: ubuntu-latest
 
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: mcp/docs-search-review   # 추후 main 수정
 
       - name: Push hf-translation-docs-explorer to HF Space
         env:
@@ -67,6 +68,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: mcp/docs-search-review   # 추후 main 수정
 
       - name: Push hf-translation-reviewer to HF Space
         env:
